tests/bad/error_prop_result_to_option.oc
/// fail: Cannot use ! here, expression is std::result::Result<i32, i32> but function returns std::option::Option<i32>

import std::result::Result
import std::option::Option

def foo(ok: bool): Result<i32, i32> => match ok {
    true => Ok(42),
    false => Error(7)
}

def bar(ok: bool): Option<i32> {
    let res0 = foo(ok)!
    return Some(res0)
}